# FastDebugger

./: CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish-pypi.yml  python-publish-pypitest.yml
FastDebugger/: FastDebugger.py  __init__.py  fast_debugger.py
Logo/: FastDebugger logo.psd
