[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"    
]
build-backend = "setuptools.build_meta"

[project]
name = "FastDebugger"
version = "0.0.41"
authors = [
  { name="Rasmus Ohert", email="rassemichael@gmail.com" },
]
description = "Fast debugger for Python 3"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "colored"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/RasseTheBoy/FastDebugger"