[metadata]
name = FastDebugger
version = 0.0.42
author = Rasmus Ohert
author_email = rassemichael@gmail.com
description = Fast debugger for Python 3
long_description = A package created for debugging Python 3 code
url = https://github.com/RasseTheBoy/FastDebugger
keywords = python, tool, help
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    
[options]
packages = find:
install_requires =
    colored
python_requires = >=3.7